# nd-script

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_ACHIEVEMENTS_REPORT.md  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_UPLOAD_INSTRUCTIONS_v2.0.0.md  LICENSE  LINK_VERIFICATION.md  PERFORMANCE_REPORT.md  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_REPORT.md  README.md  git_commands.ps1  git_commands.sh  pyproject.toml  requirements.txt  roo.json  setup.py
.github/workflows/: arabic-comma-validation.yml  ci.yml
docs/: API_REFERENCE.md  FONTS_SETUP.md  IMPROVEMENTS_REPORT.md  PERFORMANCE_REPORT.md  TESTING_GUIDE.md  architecture.md  index.html  language.md  optimization.md  scripts.js  styles.css  tutorial.md
docs/examples/: arabic_comma_usage.ndx  basic-simulation.ndx  conditional-collapse.ndx  control_flow_examples.ndx  golden-time-lapse.ndx
nds/: __init__.py
nds/api/: __init__.py  jupyter_integration.py  ndscript_api.py
nds/cli/: __init__.py  nds.py
nds/grammar/: __init__.py  nds.lark
nds/runtime/: __init__.py  ast.py  ast_cache.py  bytecode_compiler.py  control_flow_exceptions.py  enhanced_parser.py  environment.py  errors.py  fast_transformer.py  import_resolver.py  interpreter.py  macro_processor.py  operation_batcher.py  parallel_processor.py  scope_manager.py  type_system.py  version_manager.py
nds/tests/: __init__.py
nds/tools/: doc_generator.py
nds/web/: playground.html
vscode-extension/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: nds.tmLanguage.json
